Mon Jun 26 20:54:36 1995  David J. MacKenzie  <djm@catapult.va.pubnix.com>

	* acgeneral.m4 (AC_LANG_C, AC_LANG_CPLUSPLUS): Put the command
	  being run into the log file.

Thu Jun 22 22:33:23 1995  David J. MacKenzie  <djm@catapult.va.pubnix.com>

	* acspecific.m4 (AC_PROG_INSTALL): Don't cache a shell script path.

	* acgeneral.m4 (AC_CHECK_LIB): Allow lib name to contain a . or /,
	by fixing the cache variable name.

Wed Jun 14 23:07:20 1995  David J. MacKenzie  <djm@geech.gnu.ai.mit.edu>

	* Version 2.4.

Sun May  7 08:09:12 1995  David J. MacKenzie  <djm@geech.gnu.ai.mit.edu>

	* acspecific.m4 (AC_PATH_X_XMKMF): Check for libX11.{so,sl} as
	well as .a when seeing whether LIBDIR or USRLIBDIR is right.

Sat May  6 17:29:07 1995  David J. MacKenzie  <djm@geech.gnu.ai.mit.edu>

	* acspecific.m4 (AC_PROG_CPP): If CPP is already set, use that as
	the value and set the cache variable to it.

Mon Mar 27 10:48:36 1995  David J. MacKenzie  <djm@churchy.gnu.ai.mit.edu>

	* Version 2.3.

	* acgeneral.m4 (AC_OUTPUT): Add quotes around the echo arguments
	in the trap, so backslashes aren't required for multiline input.
	From G.Wilford@ee.surrey.ac.uk.
	Also use the sed trick when not using a config header file.

Thu Mar 23 18:02:25 1995  David J. MacKenzie  <djm@catapult.va.pubnix.com>

	* acgeneral.m4 (AC_LANG_C, AC_LANG_CPLUSPLUS): Put "-c" right
	  after compiler name.  Same for "-o conftest".

	* ifnames.sh (AC_MACRODIR): Default to @datadir@, not a hardcoded
	  path. 

	* Test release 2.2.1.

	* acgeneral.m4 (AC_OUTPUT): Use sed, not tr, so we only remove the
	  output config header, not the input one too.  From
	  muessig@ipf.bau-verm.uni-karlsruhe.DE (Peter Muessig).
	  (AC_LANG_C): Undo Feb 7 change.  According to Roland McGrath,
	  most compilers require all options but -l... and -o to come first.

	* Makefile.in (uninstall): Don't use $@, since the cd makes it
	  invalid when srcdir is relative.
